--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
       </section>
       <!-- /Contact Section -->
     </main>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="JS/all.min.js"></script>
     <script src="JS/main.js"></script>
   </body>
